compiler/lume_parser/src/snapshots/lume_parser__parser__tests__range_snapshots@literal_exclusive.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"let _ = (0..1);\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Some(
                Scalar(
                    ScalarType {
                        name: Path {
                            name: Identifier {
                                name: "void",
                                location: Location(
                                    13..17,
                                ),
                            },
                            root: NamespacePath {
                                path: [],
                                location: Location(
                                    0..0,
                                ),
                            },
                            location: Location(
                                13..17,
                            ),
                        },
                    },
                ),
            ),
            block: Block {
                statements: [
                    VariableDeclaration(
                        VariableDeclaration {
                            name: Identifier {
                                name: "_",
                                location: Location(
                                    24..25,
                                ),
                            },
                            variable_type: None,
                            value: Range(
                                Range {
                                    lower: Literal(
                                        Int(
                                            IntLiteral {
                                                value: 0,
                                                location: Location(
                                                    29..30,
                                                ),
                                                kind: I32,
                                            },
                                        ),
                                    ),
                                    upper: Literal(
                                        Int(
                                            IntLiteral {
                                                value: 1,
                                                location: Location(
                                                    32..33,
                                                ),
                                                kind: I32,
                                            },
                                        ),
                                    ),
                                    inclusive: false,
                                    location: Location(
                                        29..33,
                                    ),
                                },
                            ),
                            location: Location(
                                20..35,
                            ),
                        },
                    ),
                ],
                location: Location(
                    18..37,
                ),
            },
            location: Location(
                0..37,
            ),
            documentation: None,
        },
    ),
]
