compiler/lume_parser/src/snapshots/lume_parser__parser__tests__return_snapshots@call.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"return a.b(c);\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                    location: Location(
                        13..17,
                    ),
                },
            ),
            block: Block {
                statements: [
                    Return(
                        Return {
                            value: Some(
                                Call(
                                    Call {
                                        callee: Some(
                                            Variable(
                                                Variable {
                                                    name: Identifier {
                                                        name: "a",
                                                        location: Location(
                                                            27..28,
                                                        ),
                                                    },
                                                },
                                            ),
                                        ),
                                        name: Identifier {
                                            name: "b",
                                            location: Location(
                                                29..30,
                                            ),
                                        },
                                        arguments: [
                                            Variable(
                                                Variable {
                                                    name: Identifier {
                                                        name: "c",
                                                        location: Location(
                                                            31..32,
                                                        ),
                                                    },
                                                },
                                            ),
                                        ],
                                        type_parameters: [],
                                        location: Location(
                                            29..32,
                                        ),
                                    },
                                ),
                            ),
                            location: Location(
                                20..34,
                            ),
                        },
                    ),
                ],
                location: Location(
                    18..36,
                ),
            },
            location: Location(
                0..36,
            ),
        },
    ),
]
