compiler/lume_parser/src/snapshots/lume_parser__parser__tests__return_snapshots@extra_semi.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr_err(\"return;;\")"
---
InvalidExpression {
    source: SourceFile {
        id: SourceFileId(
            PackageId(
                0,
            ),
            0,
        ),
        name: Internal,
        content: "return;;",
        package: PackageId(
            0,
        ),
    },
    range: 7..8,
    actual: ;,
}
