compiler/lume_parser/src/snapshots/lume_parser__parser__tests__return_snapshots@scalar.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"return 1;\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Some(
                Scalar(
                    ScalarType {
                        name: Path {
                            name: Identifier {
                                name: "void",
                                location: Location(
                                    13..17,
                                ),
                            },
                            root: NamespacePath {
                                path: [],
                                location: Location(
                                    0..0,
                                ),
                            },
                            location: Location(
                                13..17,
                            ),
                        },
                    },
                ),
            ),
            block: Block {
                statements: [
                    Return(
                        Return {
                            value: Some(
                                Literal(
                                    Int(
                                        IntLiteral {
                                            value: 1,
                                            location: Location(
                                                27..28,
                                            ),
                                            kind: I32,
                                        },
                                    ),
                                ),
                            ),
                            location: Location(
                                20..29,
                            ),
                        },
                    ),
                ],
                location: Location(
                    18..31,
                ),
            },
            location: Location(
                0..31,
            ),
            documentation: None,
        },
    ),
]
