compiler/lume_parser/src/snapshots/lume_parser__parser__tests__self_snapshots@self.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"self\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Some(
                Scalar(
                    ScalarType {
                        name: "void",
                        location: Location(
                            13..17,
                        ),
                    },
                ),
            ),
            block: Block {
                statements: [
                    Expression(
                        Variable(
                            Variable {
                                name: Identifier {
                                    name: "self",
                                    location: Location(
                                        20..24,
                                    ),
                                },
                            },
                        ),
                    ),
                ],
                location: Location(
                    18..26,
                ),
            },
            location: Location(
                0..26,
            ),
            documentation: None,
        },
    ),
]
