compiler/lume_parser/src/snapshots/lume_parser__parser__tests__self_snapshots@self_binary_op.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"self + self\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Some(
                Scalar(
                    ScalarType {
                        name: "void",
                        location: Location(
                            13..17,
                        ),
                    },
                ),
            ),
            block: Block {
                statements: [
                    Expression(
                        Call(
                            Call {
                                callee: Some(
                                    Variable(
                                        Variable {
                                            name: Identifier {
                                                name: "self",
                                                location: Location(
                                                    20..24,
                                                ),
                                            },
                                        },
                                    ),
                                ),
                                name: Identifier {
                                    name: "+",
                                    location: Location(
                                        25..26,
                                    ),
                                },
                                arguments: [
                                    Variable(
                                        Variable {
                                            name: Identifier {
                                                name: "self",
                                                location: Location(
                                                    27..31,
                                                ),
                                            },
                                        },
                                    ),
                                ],
                                type_parameters: [],
                                location: Location(
                                    20..27,
                                ),
                            },
                        ),
                    ),
                ],
                location: Location(
                    18..33,
                ),
            },
            location: Location(
                0..33,
            ),
            documentation: None,
        },
    ),
]
