compiler/lume_parser/src/snapshots/lume_parser__parser__tests__self_snapshots@self_call.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"self.invoke()\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Some(
                Scalar(
                    ScalarType {
                        name: "void",
                        location: Location(
                            13..17,
                        ),
                    },
                ),
            ),
            block: Block {
                statements: [
                    Expression(
                        Call(
                            Call {
                                callee: Some(
                                    Variable(
                                        Variable {
                                            name: Identifier {
                                                name: "self",
                                                location: Location(
                                                    20..24,
                                                ),
                                            },
                                        },
                                    ),
                                ),
                                name: Identifier {
                                    name: "invoke",
                                    location: Location(
                                        25..31,
                                    ),
                                },
                                arguments: [],
                                type_parameters: [],
                                location: Location(
                                    25..31,
                                ),
                            },
                        ),
                    ),
                ],
                location: Location(
                    18..35,
                ),
            },
            location: Location(
                0..35,
            ),
            documentation: None,
        },
    ),
]
