compiler/lume_parser/src/snapshots/lume_parser__parser__tests__self_snapshots@self_static_call.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"self::invoke()\")"
---
[
    Expression(
        Call(
            Call {
                callee: None,
                name: Path {
                    name: Identifier {
                        name: "invoke",
                        location: Location(
                            6..12,
                        ),
                    },
                    root: NamespacePath {
                        path: [
                            Identifier {
                                name: "self",
                                location: Location(
                                    0..4,
                                ),
                            },
                        ],
                        location: Location(
                            0..0,
                        ),
                    },
                    location: Location(
                        6..4,
                    ),
                },
                arguments: [],
                type_arguments: [],
                location: Location(
                    6..14,
                ),
            },
        ),
    ),
]
